data/derived/fa15/progs/unify/prog0895.ml.out
Characters 284-289:
  res :: [carry]
          ^^^^^
Error: This expression has type int but an expression was expected of type
         int list
